@@ -250,6 +250,7 @@ public class AnalyzingSuggester extends Lookup {
   }
 
   /** Returns byte size of the underlying FST. */
+  @Override
   public long sizeInBytes() {
     return fst == null ? 0 : fst.sizeInBytes();
   }
