@@ -31,6 +31,7 @@ import org.apache.lucene.search.suggest.jaspell.JaspellTernarySearchTrie.TSTNode
 import org.apache.lucene.util.BytesRef;
 import org.apache.lucene.util.CharsRef;
 import org.apache.lucene.util.IOUtils;
+import org.apache.lucene.util.RamUsageEstimator;
 import org.apache.lucene.util.UnicodeUtil;
 
 /**
@@ -199,5 +200,11 @@ public class JaspellLookup extends Lookup {
       IOUtils.close(in);
     }
     return true;
+  }
+
+  /** Returns byte size of the underlying TST. */
+  @Override
+  public long sizeInBytes() {
+    return RamUsageEstimator.sizeOf(trie);
   }
 }
